Fix mobile search button on mobile

--- a/styleguide/source/assets/scss/02-molecules/_search-header.scss
+++ b/styleguide/source/assets/scss/02-molecules/_search-header.scss
@@ -68,7 +68,14 @@
   }
 
   .form-actions {
-    order: 2;
+    position: absolute;
+    top: 0;
+    right: $gutter;
+
+    @include breakpoint($bp-small) {
+      position: relative;
+      order: 2;
+    }
   }
 
   &__results {
@@ -117,8 +124,14 @@
 
     .ama__search__field {
       @include gutter($margin-bottom-full...);
+      position: relative;
       margin-left: 0;
       width: 100%;
+      flex-direction: column;
+
+      @include breakpoint($bp-small) {
+        flex-direction: row;
+      }
 
       &__input,
       .ui-autocomplete-input {
@@ -148,11 +161,17 @@
       }
     }
 
+    .ama__search-header__options {
+      @include gutter($margin-top-full...);
+      width: 100%;
+    }
+
     @include breakpoint($bp-small) {
       overflow: hidden;
 
       .ama__search-header__options {
         max-width: 250px;
+        margin-top: 0;
         float: right;
       }
     }
